--- a/DEMO_DM_PROJECT/TDQ_Data Profiling/Reports/profile_address_0.1.properties
+++ b/DEMO_DM_PROJECT/TDQ_Data Profiling/Reports/profile_address_0.1.properties
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:TalendProperties="http://www.talend.org/properties" xmlns:dataquality.properties="http://dataquality.properties">
-  <TalendProperties:Property xmi:id="_9yxvheKwEe6ilNAKM5u3Mg" id="_9pf3oOKwEe6ilNAKM5u3Mg" label="profile_address" version="0.1" statusCode="development" item="_9yxvh-KwEe6ilNAKM5u3Mg" displayName="profile_address">
+  <TalendProperties:Property xmi:id="_9yxvheKwEe6ilNAKM5u3Mg" id="_9pf3oOKwEe6ilNAKM5u3Mg" label="profile_address" purpose="" description="" version="0.1" statusCode="development" item="_9yxvh-KwEe6ilNAKM5u3Mg" displayName="profile_address">
     <author href="../../talend.project#_tjBpwOH0Ee6sK8gxbW5m_w"/>
     <additionalProperties xmi:id="_9y0LsOKwEe6ilNAKM5u3Mg" key="created_product_fullname" value="Talend Real-time Big Data Platform"/>
     <additionalProperties xmi:id="_9y0LseKwEe6ilNAKM5u3Mg" key="created_product_version" value="8.0.1.20240222_1049-patch"/>
     <additionalProperties xmi:id="_9y0LsuKwEe6ilNAKM5u3Mg" key="created_date" value="2024-03-15T15:16:58.411+0530"/>
     <additionalProperties xmi:id="_9y0Ls-KwEe6ilNAKM5u3Mg" key="modified_product_fullname" value="Talend Real-time Big Data Platform"/>
     <additionalProperties xmi:id="_9y0LtOKwEe6ilNAKM5u3Mg" key="modified_product_version" value="8.0.1.20240222_1049-patch"/>
-    <additionalProperties xmi:id="_9y0LteKwEe6ilNAKM5u3Mg" key="modified_date" value="2024-03-15T15:17:02.513+0530"/>
+    <additionalProperties xmi:id="_9y0LteKwEe6ilNAKM5u3Mg" key="modified_date" value="2024-03-15T15:20:19.955+0530"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_9yxvhuKwEe6ilNAKM5u3Mg" path=""/>
   <dataquality.properties:TDQReportItem xmi:id="_9yxvh-KwEe6ilNAKM5u3Mg" property="_9yxvheKwEe6ilNAKM5u3Mg" state="_9yxvhuKwEe6ilNAKM5u3Mg" filename="profile_address_0.1.rep">
